--- a/index.html
+++ b/index.html
@@ -18,4 +18,28 @@
     <div id="root"></div>
     <script type="module" src="src/index.tsx"></script>
   </body>
+  <!-- TODO: Add source URL -->
+  <script src="URL"></script>
+  <script>
+    function arrayToTable(tableData) {
+      var table = $("<table></table>");
+      $(tableData).each(function (i, rowData) {
+        var row = $("<tr></tr>");
+        $(rowData).each(function (j, cellData) {
+          row.append($("<td>" + cellData + "</td>"));
+        });
+        table.append(row);
+      });
+      return table;
+    }
+
+    $.ajax({
+      type: "GET",
+      // Replace with URL
+      url: "URL",
+      success: function (data) {
+        $("body").append(arrayToTable(Papa.parse(data).data));
+      },
+    });
+  </script>
 </html>
